Fix for moving multiple items to top of view

Top item wasn't positioned correctly when moving multiple items
backwards to the top of the view. Don't move visibleItems.first() if
we've already repositioned the top item correctly.

Task-number: QTBUG-22762
Change-Id: Ib216adea719044ee55349478237473ff3194a326
Reviewed-by: Martin Jones <martin.jones@nokia.com>